--- a/M@stermind/nbproject/project.properties
+++ b/M@stermind/nbproject/project.properties
@@ -51,7 +51,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=m.stermind.MStermind
+main.class=mastermind.MStermind
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
